crates/check_configuration/src/snapshots/config_already_exists.snap
---
source: crates/check_service/src/configuration/diagnostics.rs
expression: content
---
check.json configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × It seems that a configuration file already exists
