crates/check_configuration/src/snapshots/deserialization_error.snap
---
source: crates/check_service/src/configuration/diagnostics.rs
expression: content
---
parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `:` but instead found `}`
  
    1 │ {·
    2 │ 
  > 3 │ "formatter" }
      │             ^
  
  i Remove }
