crates/check_configuration/src/snapshots/unknown_rule.snap
---
source: crates/check_service/src/configuration/diagnostics.rs
expression: content
---
rome.json configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × invalid rule name `foo_bar`
